# student-assistant-backend

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README.md  academic-integrity.md  api-reference.md  architecture.md  artifacts.md  evaluation-plan.md  evaluation-results.md  requirements.md  setup-guide.md
docs/adrs/: 001-layered-architecture.md  002-azure-openai-langchain.md  003-mongodb-beanie.md  004-jwt-httponly-cookies.md  005-sse-streaming.md  006-template-based-prompts.md  007-tool-based-integrations.md  008-dynamic-tool-resolution.md  009-canvas-personal-tokens.md  010-academic-integrity-guardrails.md  README.md
docs/evidence/: README.md
docs/evidence/academic-integrity/: README.md
docs/evidence/canvas/: README.md
docs/evidence/canvas/images/chat/: README.md
docs/evidence/chat/: README.md
docs/evidence/google-calendar/: README.md
docs/evidence/notion/: README.md
docs/evidence/settings/: README.md
src/app/api/: main.py
src/app/api/dependencies/: auth_dep.py  chat_dep.py  google_dep.py  notion_dep.py
src/app/api/routes/: __init__.py  auth_route.py  canvas_route.py  chat_route.py  google_route.py  notion_route.py  user_route.py
src/app/application/services/: agent_service.py  auth_service.py  google_service.py  notion_service.py  token_service.py  user_settings_service.py
src/app/application/use_cases/: canvas_uc.py  chat_uc.py
src/app/domain/db/models/: __init__.py  canvas.py  chat.py  (+3 more)
src/app/domain/tools/: google_calendar_tools.py  notion_tools.py
src/app/infrastructure/config/: __init__.py  config.py  db.py
src/app/prompts/: prompt_builder.py
src/app/prompts/templates/: guardrails.txt  no_integrations_system.txt  student_assistant_system.txt
src/app/shared/lib/: html_parser.py
src/app/shared/schemas/: __init__.py  auth.py  user.py
(+21 files in other folders)
