[project]
name = "student-assistant-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "jorgechvz",email = "jchavezponce@byupathway.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "openai (>=2.14.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "langchain (>=1.2.1,<2.0.0)",
    "beanie (>=2.0.1,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "html2text (>=2025.4.15,<2026.0.0)",
    "markdown (>=3.10.1,<4.0.0)",
    "martian (>=2.1,<3.0)",
    "mistletoe (>=1.5.1,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "app"
from = "src"
[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

